# RayTracerProject

./: .gitignore  Install.bat  LICENSE  readme.md
Timer/: timer.hpp
compile/: CMakeLists.txt
headers/: Material.hpp  Matrix4x4.hpp  RenderSaver.hpp  RenderedScene.hpp  camera.hpp  distantLight.hpp  hit_record.hpp  inverseSquareRoot.hpp  isBehind.hpp  light.hpp  myMath.hpp  phongMaterial.hpp  pixel.hpp  pointLight.hpp  pointLightVisible.hpp  ray.hpp  reflective.hpp  renderer.hpp  scene.hpp  shape.hpp  simpleCamera.hpp  sphere.hpp  transparent.hpp  vector3f.hpp
src/: RenderSaver.cpp  RenderedScene.cpp  distantLight.cpp  inverseSquareRoot.cpp  main.cpp  phongMaterial.cpp  pixel.cpp  pointLight.cpp  pointLightVisible.cpp  ray.cpp  reflective.cpp  renderer.cpp  scene.cpp  simpleCamera.cpp  sphere.cpp  transparent.cpp  vector3f.cpp
